# real-estate-agency-backend

./: .editorconfig  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  config.docker.toml  config.toml  docker-compose.application.yml  docker-compose.yml  justfile
application/: Cargo.toml
application/src/: args.rs  config.rs  context.rs  error.rs  lib.rs  main.rs
application/src/api/: mod.rs  mutation.rs  placement.rs  query.rs  realty.rs  scalar.rs  subscription.rs  user.rs
application/src/api/contract/: employment.rs  management_for_rent.rs  management_for_sale.rs  mod.rs  rent.rs  sale.rs
application/src/api/report/: mod.rs  salary.rs
common/: Cargo.toml
common/src/: datetime.rs  handler.rs  kind.rs  lib.rs  money.rs  operations.rs  pagination.rs  percent.rs  unit.rs
migrations/: V1__basic.sql  V2__users.sql  V3__realties.sql  V4__contracts.sql
service/: Cargo.toml
service/src/: lib.rs
service/src/command/: authorize_user_session.rs  create_employment_contract.rs  create_management_for_rent_contract.rs  create_management_for_sale_contract.rs  create_realty.rs  create_rent_contract.rs  create_sale_contract.rs  create_user.rs  create_user_session.rs  deplace_contract.rs  mod.rs  place_contract.rs  terminate_contract.rs  update_user_email.rs  update_user_name.rs  update_user_password.rs  update_user_phone.rs
service/src/domain/: mod.rs  realty.rs
service/src/domain/contract/: employment.rs  management_for_rent.rs  management_for_sale.rs  mod.rs  rent.rs  sale.rs
service/src/domain/user/: mod.rs  session.rs
service/src/infra/: mod.rs
service/src/infra/database/: mod.rs
service/src/infra/database/postgres/: connection.rs  fuzz_pattern.rs  mod.rs
service/src/infra/database/postgres/client/: mod.rs  non_tx.rs  tx.rs
service/src/infra/database/postgres/impls/: contract.rs  mod.rs  placement.rs  realty.rs  user.rs
service/src/query/: contract.rs  contracts.rs  mod.rs  placements.rs  realties.rs  realty.rs  user.rs  users.rs
service/src/query/report/: mod.rs  salary.rs
service/src/read/: contract.rs  mod.rs  placement.rs  realty.rs  user.rs
service/src/task/: background.rs  clean_unused_realties.rs  mod.rs
