[package]
name = "application"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["tracing", "ws"] }
axum-client-ip = "0.6"
axum-extra = { version = "0.9", features = ["typed-header"] }
common = { path = "../common", features = ["juniper"] }
config = "0.14"
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "1", features = ["as_ref", "debug", "display", "error", "into", "from"] }
itertools = "0.13"
futures = "0.3"
http = "1"
humantime-serde = "1.1"
jsonwebtoken = "9.3"
juniper = { version = "0.16", features = ["uuid"] }
juniper_axum = { version = "0.1", features = ["subscriptions"] }
juniper_graphql_ws = "0.4"
refinery = { version = "0.8", features = ["tokio-postgres"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
service = { path = "../service" }
smart-default = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracerr = "0.3"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
